agrega busqueda general se quita de archivos

--- a/templates/archivos/select_clientes.html.twig
+++ b/templates/archivos/select_clientes.html.twig
@@ -4,6 +4,9 @@
 
 {% block body %}
 
+{% block busqueda_general %}
+{% endblock %} 
+
 <style type="text/css">
   select.form-control{
     display: none;
