--- a/templates/archivos/index.html.twig
+++ b/templates/archivos/index.html.twig
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+{% block busqueda_general %}
+{% endblock %} 
+
+
 {% block body %}
   <section class="content">
     <div class="container-fluid">
