--- a/templates/archivos/no_files.html.twig
+++ b/templates/archivos/no_files.html.twig
@@ -2,6 +2,9 @@
 
 {% block content %}
 
+{% block busqueda_general %}
+{% endblock %} 
+
 {% block body %}
   <section class="content">
     <div class="container-fluid">
