--- a/templates/clientes/cuentas_por_cobrar.html.twig
+++ b/templates/clientes/cuentas_por_cobrar.html.twig
@@ -278,6 +278,9 @@
                   </tbody>
 
                 </table>
+                  <div class="navigation">
+                        {{ knp_pagination_render(pagination) }}
+                  </div>
               </div>
             </div>
           </div>
