--- a/templates/clientes/pagos.html.twig
+++ b/templates/clientes/pagos.html.twig
@@ -290,8 +290,13 @@
                     </tr>
                   {% endfor %}
                   </tbody>
-
+                 
                 </table>
+
+                 <div class="navigation">
+                        {{ knp_pagination_render(pagination) }}
+                  </div>
+
               </div>
             </div>
           </div>
