nuevos mensajes clientes y auxiiares

--- a/templates/clientes/cuentas_por_cobrar.html.twig
+++ b/templates/clientes/cuentas_por_cobrar.html.twig
@@ -278,7 +278,10 @@
                   </tbody>
 
                 </table>
-                  <div class="navigation">
+                  <div class="count">
+                 Total Registros {{ pagination.getTotalItemCount }}
+                </div>
+                <div class="navigation">
                         {{ knp_pagination_render(pagination) }}
                   </div>
               </div>
