--- a/templates/clientes/pagos_intercompania.html.twig
+++ b/templates/clientes/pagos_intercompania.html.twig
@@ -127,7 +127,7 @@
                             <div class="form-line" style="margin-top: -15px">
                             <label>Mes</label>
 
-                             <input type="number" name="filtros[mes]" id="mes" value="{{filtros.mes}}" min="1" max="12" >
+                             <input type="number" name="filtros[mes]" id="mes" value="{{filtros.mes}}" min="1" max="12" onKeyPress="return soloNumeros(event)" >
                         </div>
                     </div>
 
@@ -153,7 +153,7 @@
 
             <div class="header">
               <h2>
-                <strong>Compobantes de pago</strong></h2>
+                <strong>Comprobantes de pago</strong></h2>
               <ul class="header-dropdown m-r--5">
                 <li class="dropdown">
                   <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -261,6 +261,12 @@
                   </tbody>
 
                 </table>
+                  <div class="count">
+                 Total Registros {{ pagination.getTotalItemCount }}
+                </div>
+                <div class="navigation">
+                        {{ knp_pagination_render(pagination) }}
+                  </div>
               </div>
             </div>
           </div>
@@ -517,6 +523,11 @@
 {% block body_javascript %}
 <script type="text/javascript">
    var cheque=true;
+    function soloNumeros(e){
+      var key = window.Event ? e.which : e.keyCode
+      return (key >= 48 && key <= 57)
+    }
+
 
    function exportar(){
     $("#exportar").val("true");
@@ -526,6 +537,19 @@
 
  $('document').ready(function(){
 
+        $("#mes").keydown(function(){
+         valor=$(this).val();
+         if(valor>12){
+          $(this).val("12");
+          return false;
+         }
+         if(valor<0){
+          return false;
+         }
+         if(valor=='00'){
+           $(this).val("01");
+         }
+      })
       $(".reportar_cuenta").click(function(e){
         e.preventDefault();
         var id=$(this).data('id');
