--- a/templates/clientes/nomina.html.twig
+++ b/templates/clientes/nomina.html.twig
@@ -306,7 +306,7 @@
           </div>
             <div class="form-group">
                 <div class="form-line">
-                    <input type="text" name="fecha-alta" id="fecha-alta" class="form-control date" placeholder="Fecha de alta">
+                    <input type="date" name="fecha-alta" id="fecha-alta" class="form-control date" placeholder="Fecha de alta">
                 </div>
             </div>
             <div class="form-group">
