Hot fix, crear cliente y  crear auxiliar

--- a/templates/clientes/index.html.twig
+++ b/templates/clientes/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-
+{% block content %}
 {% block body %}
   <section class="content">
     <div class="container-fluid">
@@ -157,7 +157,7 @@
   </div>
 {% endblock %} 
 
-
+{% endblock %}
 
 {% block body_javascript %}
 <script type="text/javascript">
