Cambio de labels

--- a/templates/clientes/pagos_intercompania.html.twig
+++ b/templates/clientes/pagos_intercompania.html.twig
@@ -182,8 +182,8 @@
                       <th>Rfc</th>
 
                       <th>Valor</th>
-                      <th>Comprobado</th>
-                      <th>Por Comprobar</th>
+                      <th>Facturado</th>
+                      <th>Por Facturar</th>
 
                       <th>Facturas</th>
                     </tr>
