--- a/templates/clientes/cuentas_por_cobrar.html.twig
+++ b/templates/clientes/cuentas_por_cobrar.html.twig
@@ -32,11 +32,11 @@
           </div>
           <div class="col-xl-6 col-lg-7 col-md-8 col-sm-12 text-right">
           {% if pago %}
-            {% if (pago.revisado==0 or pago.revisado=="") and pago.tipoPagoId<5 %}
+            {% if (pago.revisado==0 or pago.revisado=="") or pago.tipoPagoId<5 %}
               <div class="breadcrumb-chart">
                 <div class="float-right">
                   <div class="icon m-b-10">
-                     <a href="{{path('cuentas_por_cobrar_subir_archivos',{clienteid:pago.clienteId})}}" type="button" class="btn btn-primary  waves-effect" >Subir xml</a>
+                     <a href="{{path('cuentas_por_cobrar_subir_archivos',{clienteid:pago.clienteId,id:pago.id})}}" type="button" class="btn btn-primary  waves-effect" >Subir xml</a>
                   </div>
                 </div>
               </div>
