--- a/templates/clientes/cuentas_por_cobrar.html.twig
+++ b/templates/clientes/cuentas_por_cobrar.html.twig
@@ -220,6 +220,7 @@
                   <thead>
                     <tr>
                       <th>Folio</th>
+                      <th>UUID</th>
                       <th>Proveedor</th>
                       <th>RFC</th>
                       <th>Fecha</th>
@@ -238,6 +239,7 @@
                     <tr>
 
                       <td>{{cuenta.folio}}</td>
+                        <td>{{ cuenta.uuid }}</td>
                       <th>{{cuenta.proveedor}}</th>
                       <td>{{cuenta.rfc}}</td>
                       <td>{{cuenta.fecha|date('d/m/Y')}}</td>
