--- a/templates/clientes/pagos_intercompania.html.twig
+++ b/templates/clientes/pagos_intercompania.html.twig
@@ -230,15 +230,17 @@
 
                       </a>
                        {% if pago.file !="" %}
-                       <a href="{{asset(pago.file)}}" target="_blank" class="col-dark-gray waves-effect m-r-20" title="Archivo Adjunto">
+                       {#<a href="{{asset(pago.file)}}" target="_blank" class="col-dark-gray waves-effect m-r-20" title="Archivo Adjunto">
                           <i class="material-icons">remove_red_eye</i>
-                        </a>
+                        </a> #}
                         {% endif %}
                         
                         {% if pago.file== "" %}
-                           <a href="#" data-id="{{pago.id}}" class="waves-effect m-r-20 reportar_cuenta" title="Agregar Comprobante">
+                           {#
+                            <a href="#" data-id="{{pago.id}}" class="waves-effect m-r-20 reportar_cuenta" title="Agregar Comprobante">
                               <i class="material-icons">add</i>
-                             </a> 
+                             </a>
+                             #}
                         {% endif %}
                             {% if pago.tipoPagoId!=5 %}
 
