fix: add imagen en comprobante de pago

--- a/templates/clientes/link_pdf.html.twig
+++ b/templates/clientes/link_pdf.html.twig
@@ -1,4 +1,4 @@
-  <a href="{{path('detalle_factura',{id:pdf.id})}}" data-toggle="modal" data-target="#exampleModalDetalle" class="col-dark-gray waves-effect m-r-20 detalle_factura" data-id="{{pdf.id}}" title="Ver Detalle">
+  <a href="{{path('detalle_factura',{id:pdf.id})}}" data-toggle="modal" data-target="#exampleModalDetalle" class="col-dark-gray waves-effect m-r-20 detalle_factura" data-type="pdf" data-id="{{pdf.id}}" title="Ver Detalle">
                          <i class="material-icons">attach_file</i>
                        
 
