--- a/templates/clientes/pagos_intercompania.html.twig
+++ b/templates/clientes/pagos_intercompania.html.twig
@@ -218,9 +218,10 @@
                         {% endif %}
                         
                         {% if pago.file== "" %}
-                           <a href="#" data-id="{{pago.id}}" class="waves-effect m-r-20 reportar_cuenta" title="Agregar Comprobante">
+                          <!-- <a href="#" data-id="{{pago.id}}" class="waves-effect m-r-20 reportar_cuenta" title="Agregar Comprobante">
                               <i class="material-icons">add</i>
                              </a> 
+                          !-->
                         {% endif %}
                             {% if pago.tipoPagoId!=5 %}
 
